# frankenphp-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml
frankenphp_cli/: __init__.py  config.py  main.py
frankenphp_cli/core/: __init__.py  caddy.py  database.py  php.py  site.py  user.py  wordpress.py
frankenphp_cli/templates/: caddy.tpl  wp-config.tpl
frankenphp_cli/utils/: __init__.py  logger.py  state.py  system.py  validators.py
tests/: __init__.py  test_caddy.py  test_site.py  test_state.py
